<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardElevation="5dp"
    app:cardBackgroundColor="@color/color1">

    <TextView
        android:id="@+id/NoteTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/color5"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/lockedIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/fasolid900"
        android:text="\uf023"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/unlockedIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/fasolid900"
        android:text="\uf3c1"
        android:textSize="20sp"
        tools:visibility="visible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/listPreferredItemPaddingLeft"
            android:text="TextView"
            tools:text="@tools:sample/date/ddmmyy"
            android:textColor="@color/color5"/>

        <TextView
            android:id="@+id/LastEditedDate"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/listPreferredItemPaddingLeft"
            android:text="TextView"
            tools:text="@tools:sample/date/ddmmyy"
            android:textColor="@color/color5"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
