<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.example.julen.nativeappsproject.model.Note"/>
        <variable
            name="noteViewModel"
            type="com.example.julen.nativeappsproject.note.NoteViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".note.AddNoteFragment">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/noteNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Note name:" />

                <EditText
                    android:id="@+id/noteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@={noteViewModel.note.alias}"
                    android:backgroundTint="@color/color4"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lockedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Locked? " />

                <CheckBox
                    android:id="@+id/lockedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={noteViewModel.note.locked}" />
            </LinearLayout>

            <EditText
                android:id="@+id/noteTextEditing"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:focusableInTouchMode="true"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@={noteViewModel.note.secret}"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </android.support.v7.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>
