<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/ic_save_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_note"
        android:title="@string/add_note"
        android:icon="@drawable/ic_add_white"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="102"
        android:title="@string/change_password"
        android:visible="false"
        app:showAsAction="never" />

</menu>